# legal-document-qa-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/: leqal_qa_dataset.csv  sample_contract.txt  sample_questions.jsonl
legal_qa/: __init__.py  assistant.py  chunking.py  cli.py  cuad_adapter.py  document_loader.py  reader.py  retriever.py  tokenization.py  types.py
results/: cuad_evaluation_results.csv  cuad_evaluation_summary.json  cuad_method_comparison.csv  error_analysis_by_category.csv  evaluation_results.csv  evaluation_summary.json  method_comparison.csv  method_comparison.json
scripts/: evaluate_cuad.py  evaluate_dataset.py  evaluate_sample.py  train_cuad_qa.py  train_legal_bert_qa.py
tests/: test_assistant.py  test_retriever.py
