[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-document-qa-assistant"
version = "0.1.0"
description = "Evidence-grounded legal document question answering assistant."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Legal QA Project" }]
dependencies = []

[project.optional-dependencies]
app = [
  "streamlit>=1.35",
  "pypdf>=4.2",
  "python-docx>=1.1",
]
ml = [
  "transformers>=4.40",
  "torch>=2.2",
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]
dev = [
  "pytest>=8.2",
]

[project.scripts]
legal-qa = "legal_qa.cli:main"

[tool.setuptools.packages.find]
include = ["legal_qa*"]
